tests/miniJava/neg/000084_mutation.MiniJava
class java { public class java { } static void Main ( String [ ] java ) { { } } }
